Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-46439

Backport MB-46262 (Shutdown race causes SyncWrite prepare to get "lost" and out of order completions on replica)

    XMLWordPrintable

Details

    • Triaged
    • 1
    • No

    Description

      MB-46272 causes us to remove prepares from the ADM::resolvedQ during shutdown while the timeout and completion tasks are still running. As the flusher is still running at this point in shutdown we may persist completions of writes that existed in ADM::trackedWrites at that point in time. This can cause us to complete SyncWrites out of order and the replica to throw exceptions.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ashwin.govindarajulu Ashwin Govindarajulu
              ben.huddleston Ben Huddleston
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty